common-applications/control/jenkins/oauth-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      automountServiceAccountToken: false
      containers:
        - args:
          - --provider=oidc
          - --email-domain=*
          - --upstream=http://jenkins.jenkins.svc.cluster.local
          - --http-address=0.0.0.0:4180
          - --provider-display-name=authing
          - --cookie-expire=12h0m0s
          - --redirect-url=https://jenkins.osinfra.cn/oauth2/callback
          - --oidc-issuer-url=https://infra-jenkins.authing.cn/oidc
          # for jenkins job or views and their resource to to loaded
          - --skip-auth-regex=^/job/
          - --skip-auth-regex=^/queue/
          - --skip-auth-regex=^/view/
          - --skip-auth-regex=^/static/
          - --skip-auth-regex=^/adjuncts/
          - --skip-auth-regex=^/images/
          - --skip-auth-regex=^/jnlpJars/
          - --skip-auth-regex=^/computer/
          - --skip-auth-regex=^/wsagents/
          - --skip-auth-regex=^/generic-webhook-trigger/
          - --skip-auth-regex=^/crumbIssuer/
          - --skip-auth-regex=^/github-webhook/
          # for webhook to be triggered
          - --skip-auth-regex=^/gitee-project/
          - --insecure-oidc-allow-unverified-email=true
          - --session-cookie-minimal=false
          - --pass-access-token=true
          - --cookie-secure=false
          - --login-url=https://omapi.osinfra.cn/oneid/oidc/authorize
          - --redeem-url=https://omapi.osinfra.cn/oneid/oidc/token
          - --profile-url=https://omapi.osinfra.cn/oneid/oidc/user
          - --skip-oidc-discovery=true
          - --insecure-oidc-skip-issuer-verification=true
          - --skip-jwt-bearer-tokens=false
          - --oidc-jwks-url=https://oauth2-proxy.authing.cn/oidc/.well-known/jwks.json
          - --set-xauthrequest=true
          - --skip-auth-strip-headers=false
          - --set-authorization-header=true
          - --scope=profile openid email id_token
          - --signature-key=sha256:81nwm1iqdN3FBtnj4O0kL6BRuLfzMzCKaawnztLSRYQ
          image: swr.cn-north-4.myhuaweicloud.com/opensourceway/common/oauth2-proxy:b2d87e8e29285720327bf01aee604f929ea64dd4
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 4180
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 4180
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 500m
              memory: 500Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  ports:
    - name: http
      port: 4180
      protocol: TCP
      targetPort: 4180
  selector:
    k8s-app: oauth2-proxy
