common-applications/control/jenkins/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-snippet: |
      location ~* injectedEnvVars/$ {
       return 403;
      }
      location ^~ /script {
       return 403;
      }
      location ^~ /manage/script {
       return 403;
      }
  name: jenkins-ingress
  namespace: jenkins
spec:
  tls:
    - hosts:
        - jenkins.osinfra.cn
      secretName: jenkins-tls
  rules:
    - host: jenkins.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: oauth2-proxy
              servicePort: 4180
            path: /
